--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
   },
   "homepage": "https://github.com/Raymw1/nlw4-nodejs-npscalculator#readme",
   "dependencies": {
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "reflect-metadata": "^0.1.13",
+    "sqlite3": "^5.0.11",
+    "typeorm": "^0.3.9"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
