--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "ts-node .",
     "dev": "ts-node-dev --transpile-only --ignore-watch node_modules --respawn .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
   },
   "repository": {
     "type": "git",
@@ -23,7 +23,7 @@
     "express": "^4.18.1",
     "reflect-metadata": "^0.1.13",
     "sqlite3": "^5.0.11",
-    "typeorm": "^0.3.9"
+    "typeorm": "^0.2.31"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
