--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "start": "ts-node .",
     "dev": "ts-node-dev --transpile-only --ignore-watch node_modules --respawn .",
-    "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
+    "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js",
+    "test": "NODE_ENV=test jest",
+    "posttest": "rm ./src/database/database.test.sqlite"
   },
   "repository": {
     "type": "git",
@@ -28,7 +30,12 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/jest": "^29.0.0",
+    "@types/supertest": "^2.0.12",
     "@types/uuid": "^8.3.4",
+    "jest": "^29.0.2",
+    "supertest": "^6.2.4",
+    "ts-jest": "^28.0.8",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.8.2"
