--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "dev": "ts-node-dev --transpile-only --ignore-watch node_modules --respawn .",
     "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js",
     "test": "NODE_ENV=test jest",
-    "posttest": "rm ./src/database/database.test.sqlite"
   },
   "repository": {
     "type": "git",
@@ -28,7 +27,8 @@
     "reflect-metadata": "^0.1.13",
     "sqlite3": "^5.0.11",
     "typeorm": "0.2.31",
-    "uuid": "^8.3.2"
+    "uuid": "^9.0.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
