--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/Raymw1/nlw4-nodejs-npscalculator#readme",
   "dependencies": {
     "express": "^4.18.1",
+    "express-async-errors": "^3.1.1",
     "handlebars": "^4.7.7",
     "nodemailer": "^6.7.8",
     "reflect-metadata": "^0.1.13",
